2003-04-29  Terry <tbiggs@users.sf.net>

	* bumped to 0.9.dev4
	* added requirements
	    pkgconfig-0.12.0 or later
	    GtkHTML-1.1 or later
	    gal-0.24 or later
	    gnome-print-0.35 or later
	    gdk-pixbuf-0.18 or later
	* added chapter_display_mozilla() that uses gtkembedmoz()
	  to display Hebrew right to left. Just a workaround until
	  the port to Gnome2. 

2003-04-25  Terry <tbiggs@users.sf.net>

	* added module selection (Bible or Commentary) 
	  to shortcut bar search


2003-04-07  Terry <tbiggs@users.sf.net>

	* module opions are now saved (agin)	


2003-04-05  Terry <tbiggs@users.sf.net>

	* removed gui/editor_search.h and gnome/editor_search.c
	  they are no longer needed (editors use gnome/find_dialog.c)
	  

2003-04-01  Terry <tbiggs@users.sf.net>

	* settings now saved in settings.xml using gnome-xml
	* removed backend/preferences.*
	* removed backend/bookmarks.*
	* removed backend/percomm_.*
	

2003-03-27  Terry <tbiggs@users.sf.net>

	* removed backend/shortcutbar.*
	* removed backend/interlinear.*
	

2003-03-13  Terry <tbiggs@users.sf.net>

	* bumped to dev3
	* fixed crash on open related to using old configs and bookmarks
	* added config.*, key.*, module.* and mgr.* to backend 
	* added configs.*, key.* and module.* to main
	* moved the code for using old configs and bookmarks from
	  main.c to settings.c.
	* added xml.* to main (not used yet)


2003-03-03  Terry Biggs <tbiggs@users.sf.net>

	* bumped to dev2
	* fixed crash on open caused by no bookmarks
	* sword.xpm added back to pixmaps directory (oops)

2003-02-25  Terry Biggs <tbiggs@users.sf.net>

	* added open in dialog item to bookmark popup menu


2003-02-24  Terry Biggs <tbiggs@users.sf.net>

	* bookmarks are only saved if they have been changed

2003-02-21  Terry Biggs <tbiggs@users.sf.net>

	* added show splash screen button to preferences dialog

2003-02-21  Terry Biggs <tbiggs@users.sf.net>

	* removed main/bookmark.c and main/bookmark.h
